add basic html content, basic css

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     </script>
     <script type="module" src="./script.js"></script>
     <script type="module" src="./secret.js"></script>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
+    <h1>Complete the Punchline</h1>
+    <p>Fill in the words for the punchline of each joke.</p>
+    <div id="joke-div">
+        <p id="setup-p"></p>
+        <button id="joke-btn">Hello</button>
+    </div>
 </body>
 </html>
