fill in HTML elements with joke setup and punchline upon button click

--- a/index.html
+++ b/index.html
@@ -16,11 +16,19 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Complete the Punchline</h1>
-    <p>Fill in the words for the punchline of each joke.</p>
-    <div id="joke-div">
-        <p id="setup-p"></p>
-        <button id="joke-btn">Hello</button>
-    </div>
+    <main>
+        <section>
+            <h1>Complete the Punchline</h1>
+            <p>Fill in the words for the punchline of each joke.</p>
+            <div id="joke-div">
+                <p id="setup-p">Waiting for Gemini...</p>
+                <div id="punchline-div" class="hidden"></div>
+                <button id="joke-btn">Hello</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <p>Powered by Google Gemini 1.5 Flash</p>
+    </footer>
 </body>
 </html>
