--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div id="joke-div">
                 <p id="setup-p">Waiting for Gemini...</p>
                 <div id="punchline-div" class="hidden"></div>
-                <button id="joke-btn">Hello</button>
+                <button id="joke-btn" class="hidden"></button>
             </div>
         </section>
     </main>
