add laugh emoji as favicon

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     </script>
     <script type="module" src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./media/laugh.png" type="image/x-icon">
 </head>
 <body>
     <main>
