Add score counter

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <p id="setup-p">Waiting for Gemini...</p>
                 <div id="punchline-div" class="hidden"></div>
                 <button id="joke-btn" class="hidden"></button>
+                <p id="score-p">Score: 0</p>
             </div>
         </section>
     </main>
