make the footer visible and fixed. add portfolio link, github link, styling

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
     </main>
     <footer>
-        <p>Powered by Google Gemini 1.5 Flash</p>
+        <p>Made by <a href="https://ianpintoportfolio.onrender.com">Ian Pinto</a> | <a href="https://github.com/IanP96/joke_generator_gemini_test">GitHub</a> | Powered by Google Gemini 1.5 Flash</p>
     </footer>
 </body>
 </html>
