Add high score display

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <section>
             <h1>Complete the Punchline</h1>
             <p>Fill in the words for the punchline of each joke.</p>
-            <p id="score-p">Score: 0</p>
+            <p>
+                <span id="score">Score: 0</span><span id="high-score"></span>
+            </p>
             <div id="joke-div">
                 <p id="setup-p">Waiting for Gemini...</p>
                 <div id="punchline-div" class="hidden"></div>
