track "streak" instead of score. streak goes to 0 after incorrect answer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <h1>Complete the Punchline</h1>
             <p>Fill in the words for the punchline of each joke.</p>
             <p>
-                <span id="score">Score: 0</span><span id="high-score"></span>
+                <span id="score">Streak: 0</span><span id="high-score"></span>
             </p>
             <div id="joke-div">
                 <p id="setup-p">Waiting for Gemini...</p>
