--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>
             Made by <a href="https://ianpintoportfolio.onrender.com">Ian Pinto</a> |
             <a href="https://github.com/IanP96/joke_generator_gemini_test">GitHub</a> |
-            Powered by Google Gemini 1.5 Flash <span id="goose">🪿</span>
+            Powered by Google Gemini<span id="goose">🪿</span>
         </p>
     </footer>
 </body>
